# full_dia

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  ruff.yml  test.yml
docs/: conf.py  contributing.md  index.rst  installation.md  library.md  quickstart.md
docs/api_reference/: full_dia.alphatims.rst  full_dia.rst  index.rst  modules.rst
full_dia/: assemble.py  calib.py  cfg.py  cross.py  dataloader.py  decoy.py  deepmall.py  deepmap.py  fdr.py  fxic.py  library.py  log.py  main.py  models.py  polish.py  quant.py  refine.py  scoring.py  search.py  tims.py  utils.py
full_dia/alphatims/: LICENSE.txt  bruker.py  utils.py
full_dia/cfg/: default.yaml  user.yaml
full_dia/pretrained/: deepbig_xiehe.pt  deepbig_ys_fast.pt  deepbig_ys_slow.pt  deepcenter_xiehe.pt  deepcenter_ys_fast.pt  deepcenter_ys_slow.pt
ipynb/Mixture/: diann.ipynb  fulldia.ipynb
ipynb/Plasma/: compare.ipynb
ipynb/SC-293T/: compare.ipynb
ipynb/SC-Cycle/: diann.ipynb  diann_impute_bpca.ipynb  diann_impute_minprob.ipynb  fulldia.ipynb  venn2.ipynb
ipynb/SC-LPS/: diann.ipynb  diann_impute_bpca.ipynb  diann_impute_minprob.ipynb  fulldia.ipynb  venn3.ipynb
ipynb/across/: compare.ipynb
requirements/: docs.txt  fulldia_cuda12.yml
tests/: test_assemble.py  test_calib.py  test_fdr.py  test_utils.py
